--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
           password: ${{secrets.NETIVISM_EMAIL_PASSWD}}
           to: ${{secrets.NETIVISM_NOTIFICATION_TARGET}}
           from: Github Notification
-          secure: true
+          secure: false
           ignore_cert: true
           convert_markdown: true
           subject: "[${{ github.repository }}] Run ${{ job.status }}: CI Testing - (${{github.ref_name}})"
