Add shorten sha

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,10 @@ jobs:
     if: ${{ always() }}
     runs-on: ubuntu-latest
     steps:
+      - name: Shorten sha 
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
       - name: Notification
         uses: dawidd6/action-send-mail@v3
         with:
@@ -17,7 +21,7 @@ jobs:
           secure: false
           ignore_cert: true
           convert_markdown: true
-          subject: "[${{ github.repository }}] Run ${{ job.status }}: CI Testing - (${{github.ref_name}})"
+          subject: "[${{ github.repository }}] Run ${{ job.status }}: CI Testing - ${{github.ref_name}} (${{ steps.vars.outputs.sha_short }})"
           body: |
             Executed by: ${{github.actor}}
             Job name: ${{github.job}}
