--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Shorten sha 
         id: vars
         shell: bash
-        run: echo "::set-output name=sha_short::${"${{github.sha}}"::7}"
+        run: echo "::set-output name=sha_short::${GITHUB_SHA::7}"
 
       - name: Notification
         uses: dawidd6/action-send-mail@v3
